--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ DOCTYPE
 html
   head
     title
-      | Ruby on Rails Tutorial Sample App | #{yield(:title)}
+      | Ruby on Rails Tutorial Sample App | #{full_title(yield(:title))}
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
