--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,5 +1,11 @@
-h1 Sample App
-p
-  This is the home page for the
-  a href="http:?/railstutorial.jp/" Ruby on Rails Tutorial
-  sample application.
+div class="center jumbotron"
+  h1 Welcome to the Sample App
+
+  h2
+    | This is the home page for the
+    a<> href="http://railstutorial.jp/" Ruby on Rails Tutorial
+    | sample application.
+
+  = link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary"
+
+= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'
