--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,3 +13,5 @@ html
     div.container
       = yield
       = render 'layouts/footer'
+      - if Rails.env.development?
+        = debug(params)
