--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,14 +3,16 @@ html
   head
     title
       | Ruby on Rails Tutorial Sample App | #{full_title(yield(:title))}
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = stylesheet_link_tag 'application', media: 'all'
+    = javascript_include_tag 'application'
     = csrf_meta_tags
     = render 'layouts/shim'
 
   body
     = render 'layouts/header'
     div.container
+      - flash.each do |key, value|
+        div class="alert alert-#{key}" #{value}
       = yield
       = render 'layouts/footer'
       - if Rails.env.development?
