--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,3 +1,25 @@
 = provide :title, 'Sign up'
 h1 Sign up
-p Find me in app/views/users/new.html.slim
+
+div.row
+  div class="col-md-6 col-md-offset-3"
+    = form_for(@user) do |f|
+      = render 'shared/error_messages'
+
+      div.form-group
+        = f.label :name
+        = f.text_field :name, class: 'form-control'
+
+      div.form-group
+        = f.label :email
+        = f.text_field :email, class: 'form-control'
+
+      div.form-group
+        = f.label :password
+        = f.password_field :password, class: 'form-control'
+
+      div.form-group
+        = f.label :password_confirmation, "Confirmation"
+        = f.password_field :password_confirmation, class: 'form-control'
+
+      = f.submit "Create my account", class: "btn btn-large btn-primary"
