--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html
     = render 'layouts/header'
     div.container
       - flash.each do |key, value|
-        div class="alert alert-#{key}" #{value}
+        = content_tag :div, value, class: "alert alert-#{key}"
       = yield
       = render 'layouts/footer'
       - if Rails.env.development?
