--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,10 +1,15 @@
 header class="navbar navbar-fixed-top navbar-inverse"
   div.navbar-inner
     div.container
-      = link_to 'sample app', '#', id: 'logo'
+      = link_to 'sample app', root_path, id: 'logo'
       nav
         ul class="nav navbar-nav pull-right"
           - ["home", "help", "sign in"].each do |page|
             - if page == "home"
               - title, page = page.capitalize, "root"
             li = link_to (title ? title : page.capitalize), send("#{page.split.join}_path")
+            - if signed_in?
+              li #{link_to 'Users', '#' }
+              li id="fat-menu" class="dropdown"
+                a href="#" class="dropdown-toggle" data-toggle="dropdown" Account
+                  b.caret
