--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -4,12 +4,18 @@ header class="navbar navbar-fixed-top navbar-inverse"
       = link_to 'sample app', root_path, id: 'logo'
       nav
         ul class="nav navbar-nav pull-right"
-          - ["home", "help", "sign in"].each do |page|
-            - if page == "home"
-              - title, page = page.capitalize, "root"
-            li = link_to (title ? title : page.capitalize), send("#{page.split.join}_path")
-            - if signed_in?
-              li #{link_to 'Users', '#' }
-              li id="fat-menu" class="dropdown"
-                a href="#" class="dropdown-toggle" data-toggle="dropdown" Account
-                  b.caret
+          li = link_to "Home", root_path
+          li = link_to "Help", help_path
+          - if signed_in?
+            li = link_to 'Users', '#'
+            li id="fat-menu" class="dropdown"
+              a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                | Account
+                b.caret
+              ul.dropdown-menu
+                li = link_to "Profile", current_user
+                li = link_to "Settings", '#'
+                li.divider
+                li = link_to "Sign out", signout_path, method: "delete"
+          - else
+            li = link_to "Sign in", signin_path
