--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,4 +1,4 @@
-DOCTYPE
+doctype html
 html
   head
     title
@@ -7,13 +7,11 @@ html
     = javascript_include_tag 'application'
     = csrf_meta_tags
     = render 'layouts/shim'
-
   body
     = render 'layouts/header'
     div.container
       - flash.each do |key, value|
         = content_tag :div, value, class: "alert alert-#{key}"
-
       = yield
       = render 'layouts/footer'
       - if Rails.env.development?
